--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,57 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name"
-        android:textSize="30dp"
+        android:layout_gravity="center"
+        android:text="Translator"
         android:textColor="@color/black"
-        android:layout_gravity="center"/>
+        android:textSize="40dp"
+        android:textStyle="bold|italic" />
 
-    <ImageView
-        android:id="@+id/plus_btn"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="@drawable/green_btn"
-        android:src="@drawable/plus_img"
-        android:scaleType="centerCrop"/>
+    <Button
+            android:id="@+id/practice_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="practice"
+            android:textSize="25dp"
+            android:textColor="@color/black"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/btns_background"
+            app:backgroundTint="@null"
+            />
+
+        <Button
+            android:id="@+id/vocabulary_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="vocabulary"
+            android:textSize="25dp"
+            android:textColor="@color/black"
+            android:layout_gravity="center"
+            android:background="@drawable/btns_background"
+            app:backgroundTint="@null"
+            android:layout_marginTop="5dp"
+            />
+
+        <Button
+            android:id="@+id/log_in_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="log in"
+            android:textSize="25dp"
+            android:textColor="@color/black"
+            android:layout_gravity="center"
+            android:background="@drawable/btns_background"
+            app:backgroundTint="@null"
+            android:layout_marginTop="5dp"
+            />
+
+        <ImageView
+            android:id="@+id/plus_btn"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/green_btn"
+            android:src="@drawable/plus_img"
+            android:scaleType="centerCrop"/>
 
 </LinearLayout>
