--- a/app/src/main/res/drawable/red_btn.xml
+++ b/app/src/main/res/drawable/red_btn.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
     <size android:width="60dp" android:height="60dp"/>
     <gradient android:type="radial" android:gradientRadius="50dp" android:startColor="@color/red" android:endColor="@color/dark_red" />
     <stroke android:color="@color/black" android:width="0.5dp"/>
+    <corners android:radius="20dp"/>
 </shape>
