--- a/app/src/main/res/layout/add_word_layout.xml
+++ b/app/src/main/res/layout/add_word_layout.xml
@@ -9,8 +9,8 @@
     <LinearLayout
         android:id="@+id/language_select_layout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/language_select_background"
+        android:layout_height="70dp"
+        android:background="@drawable/round_background"
         android:orientation="horizontal"
         android:layout_marginTop="5dp"
         android:elevation="5dp"
@@ -26,7 +26,7 @@
         <ImageView
             android:id="@+id/switch_languages_img"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="55dp"
             android:src="@drawable/exchange_arrows"
             android:layout_gravity="center"
             android:layout_weight="1"/>
@@ -63,11 +63,11 @@
 
         <TextView
             android:id="@+id/display_txt"
-            android:layout_width="130dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/display_translation_preview"
             android:textColor="@color/black"
-            android:textSize="25dp" />
+            android:textSize="30dp" />
 
         <ImageView
             android:id="@+id/add_translation_btn"
@@ -94,7 +94,7 @@
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:layout_alignParentRight="true"
-            android:layout_marginLeft="100dp"
+            android:layout_marginLeft="90dp"
             android:layout_toRightOf="@+id/display_txt"
             android:backgroundTint="@color/purple_200"
             android:text="save" />
@@ -105,7 +105,7 @@
             android:layout_height="45dp"
             android:layout_below="@+id/display_txt"
             android:layout_alignParentRight="true"
-            android:layout_marginLeft="100dp"
+            android:layout_marginLeft="90dp"
             android:layout_marginTop="5dp"
             android:layout_toRightOf="@+id/display_txt"
             android:backgroundTint="@color/purple_200"
@@ -121,39 +121,40 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="translate"
-        android:textSize="30dp"
+        android:textSize="35dp"
         android:layout_gravity="center" />
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="65dp"
+    android:layout_height="85dp"
     android:orientation="horizontal"
     android:gravity="center">
 
     <ImageView
         android:id="@+id/mic_img"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:src="@drawable/mic_icon"
         android:elevation="10dp"
-        android:background="@drawable/language_select_background" />
+        android:background="@drawable/round_background" />
 
     <ImageView
         android:id="@+id/camera_img"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:src="@drawable/camera_icon"
-        android:background="@drawable/language_select_background"
+        android:background="@drawable/round_background"
         android:elevation="10dp"
-        android:layout_marginLeft="5dp"/>
+        android:layout_marginLeft="5dp" />
 
 </LinearLayout>
 
     <ImageView
         android:id="@+id/backward_img"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:background="@drawable/blue_btn"
         android:src="@drawable/backward_arrow"
-        android:layout_gravity="bottom"/>
+        android:layout_gravity="bottom"
+        android:elevation="10dp"/>
 
 </LinearLayout>
