--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,8 +10,8 @@
 
     <color name="green">#4CAF50</color>
     <color name="light_green">#00FF0A</color>
-    <color name="red">#be1800</color>
-    <color name="dark_red">#711100</color>
+    <color name="red">#FF2000</color>
+    <color name="dark_red">#B11F05</color>
     <color name="orange">#FF9800</color>
     <color name="yellow">#FFEB3B</color>
     <color name="gray">#F44336</color>
