--- a/app/src/main/res/layout/activity_add_word.xml
+++ b/app/src/main/res/layout/activity_add_word.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:id="@+id/screen">
+    android:id="@+id/add_word_screen">
 
     <LinearLayout
         android:id="@+id/language_select_layout"
@@ -77,7 +77,7 @@
             android:src="@drawable/plus_img"
             android:scaleType="centerCrop"
             android:layout_below="@+id/display_txt"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
         <EditText
             android:id="@+id/additional_translation_edit_txt"
@@ -110,7 +110,7 @@
             android:layout_toRightOf="@+id/display_txt"
             android:backgroundTint="@color/purple_200"
             android:text="save"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
     </RelativeLayout>
 
@@ -156,5 +156,13 @@
         android:src="@drawable/backward_arrow"
         android:layout_gravity="bottom"
         android:elevation="10dp"/>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        style="@style/Widget.AppCompat.ProgressBar"/>
 
 </LinearLayout>
