--- a/app/src/main/res/layout/activity_add_word.xml
+++ b/app/src/main/res/layout/activity_add_word.xml
@@ -73,11 +73,11 @@
             android:id="@+id/add_translation_btn"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/green_btn"
-            android:src="@drawable/plus_img"
-            android:scaleType="centerCrop"
             android:layout_below="@+id/display_txt"
-            android:visibility="visible"/>
+            android:background="@drawable/green_btn"
+            android:scaleType="centerCrop"
+            android:src="@drawable/plus_img"
+            android:visibility="gone" />
 
         <EditText
             android:id="@+id/additional_translation_edit_txt"
@@ -97,7 +97,8 @@
             android:layout_marginLeft="90dp"
             android:layout_toRightOf="@+id/display_txt"
             android:backgroundTint="@color/purple_200"
-            android:text="save" />
+            android:text="save"
+            android:visibility="gone"/>
 
         <Button
             android:id="@+id/save_btn2"
@@ -110,7 +111,7 @@
             android:layout_toRightOf="@+id/display_txt"
             android:backgroundTint="@color/purple_200"
             android:text="save"
-            android:visibility="visible"/>
+            android:visibility="gone"/>
 
     </RelativeLayout>
 
