--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:textColor="@color/black"
         android:gravity="center"/>
 
-    <com.google.android.material.textfield.TextInputLayout
+    <!--<com.google.android.material.textfield.TextInputLayout
         android:id="@+id/username_edit_txt_layout"
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
@@ -33,6 +33,27 @@
             android:inputType="text"
             android:layout_gravity="center"
             android:textSize="30dp" />
+
+    </com.google.android.material.textfield.TextInputLayout>-->
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/email_edit_txt_layout"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:hint="Email"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        app:startIconDrawable="@drawable/ic_email">
+
+        <EditText
+            android:id="@+id/email_edit_txt"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:elegantTextHeight="true"
+            android:inputType="text"
+            android:layout_gravity="center"
+            android:textSize="25dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -53,7 +74,7 @@
             android:elegantTextHeight="true"
             android:inputType="text"
             android:layout_gravity="center"
-            android:textSize="30dp" />
+            android:textSize="25dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -82,5 +103,15 @@
         app:backgroundTint="@null"
         android:layout_marginTop="5dp"
         />
+
+    <ImageView
+        android:id="@+id/backward_img"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@drawable/blue_btn"
+        android:src="@drawable/backward_arrow"
+        android:layout_gravity="bottom"
+        android:elevation="10dp"
+        android:layout_marginTop="10dp"/>
 
 </LinearLayout>
