--- a/app/src/main/res/layout/activity_add_word.xml
+++ b/app/src/main/res/layout/activity_add_word.xml
@@ -40,6 +40,7 @@
 
     </LinearLayout>
 <com.google.android.material.textfield.TextInputLayout
+    android:layout_marginTop="20dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="word to translate"
@@ -59,7 +60,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:id="@+id/display_txt"
@@ -77,17 +79,28 @@
             android:background="@drawable/green_btn"
             android:scaleType="centerCrop"
             android:src="@drawable/plus_img"
-            android:visibility="gone" />
+            android:visibility="gone"
+            android:layout_marginTop="10dp"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/additional_translation_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Enter a translation"
+            app:endIconMode="clear_text"
+            android:inputType="text"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_below="@+id/display_txt"
+            android:visibility="gone"
+            android:layout_marginTop="10dp">
 
         <EditText
             android:id="@+id/additional_translation_edit_txt"
             android:layout_width="210dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/display_txt"
-            android:hint="Enter a translation"
-            android:inputType="text"
-            android:textSize="25dp"
-            android:visibility="gone"/>
+            android:textSize="20dp" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/save_btn1"
@@ -96,9 +109,9 @@
             android:layout_alignParentRight="true"
             android:layout_marginLeft="90dp"
             android:layout_toRightOf="@+id/display_txt"
-            android:backgroundTint="@color/purple_200"
+            android:backgroundTint="@color/teal_200"
             android:text="save"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/save_btn2"
@@ -107,11 +120,11 @@
             android:layout_below="@+id/display_txt"
             android:layout_alignParentRight="true"
             android:layout_marginLeft="90dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="20dp"
             android:layout_toRightOf="@+id/display_txt"
-            android:backgroundTint="@color/purple_200"
+            android:backgroundTint="@color/teal_200"
             android:text="save"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
     </RelativeLayout>
 
@@ -123,12 +136,15 @@
         android:layout_height="wrap_content"
         android:text="translate"
         android:textSize="35dp"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:backgroundTint="@color/teal_700"
+        android:layout_marginTop="20dp"/>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="85dp"
     android:orientation="horizontal"
-    android:gravity="center">
+    android:gravity="center"
+    android:layout_marginTop="10dp">
 
     <ImageView
         android:id="@+id/mic_img"
@@ -156,7 +172,8 @@
         android:background="@drawable/blue_btn"
         android:src="@drawable/backward_arrow"
         android:layout_gravity="bottom"
-        android:elevation="10dp"/>
+        android:elevation="10dp"
+        android:layout_marginTop="10dp"/>
 
     <ProgressBar
         android:id="@+id/progress_bar"
