--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,69 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/container"
+        android:layout_above="@id/bottomNavBar"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Translator"
-        android:textColor="@color/black"
-        android:textSize="50dp"
-        android:textStyle="bold|italic" />
+        android:id="@+id/bottomNavBar"
+        android:layout_alignParentBottom="true"
+        android:background="?android:attr/windowBackground"
+        app:menu="@menu/menu"/>
 
-    <Button
-            android:id="@+id/practice_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="practice"
-            android:textSize="30dp"
-            android:textColor="@color/black"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/btns_background"
-            app:backgroundTint="@null"
-            />
-
-        <Button
-            android:id="@+id/vocabulary_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="vocabulary"
-            android:textSize="30dp"
-            android:textColor="@color/black"
-            android:layout_gravity="center"
-            android:background="@drawable/btns_background"
-            app:backgroundTint="@null"
-            android:layout_marginTop="5dp"
-            />
-
-        <Button
-            android:id="@+id/log_in_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="log in"
-            android:textSize="30dp"
-            android:textColor="@color/black"
-            android:layout_gravity="center"
-            android:background="@drawable/btns_background"
-            app:backgroundTint="@null"
-            android:layout_marginTop="5dp"
-            />
-
-        <ImageView
-            android:id="@+id/plus_btn"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:background="@drawable/green_btn"
-            android:src="@drawable/plus_img"
-            android:elevation="15dp"
-            android:scaleType="centerCrop"
-            android:layout_marginTop="20dp"/>
-
-</LinearLayout>
+</RelativeLayout>
