--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,14 +10,35 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Log in"
+        android:text="Sign Up"
         android:textSize="30dp"
         android:textColor="@color/black"
         android:gravity="center"/>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/email_edit_txt_layout"
+        android:id="@+id/username_edit_txt_layout"
         android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:hint="Username"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        app:startIconDrawable="@drawable/ic_account_circle">
+
+        <EditText
+            android:id="@+id/username_edit_txt"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:elegantTextHeight="true"
+            android:inputType="text"
+            android:layout_gravity="center"
+            android:textSize="25dp" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/email_edit_txt_layout"
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -58,19 +79,6 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/log_in_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="log in"
-        android:textSize="25dp"
-        android:textColor="@color/black"
-        android:layout_gravity="center"
-        android:background="@drawable/btns_background"
-        app:backgroundTint="@null"
-        android:layout_marginTop="20dp"
-        />
-
-    <Button
         android:id="@+id/sign_up_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -80,7 +88,15 @@
         android:layout_gravity="center"
         android:background="@drawable/btns_background"
         app:backgroundTint="@null"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         />
+
+    <ImageView
+        android:id="@+id/backward_img"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@drawable/blue_btn"
+        android:src="@drawable/backward_arrow"
+        android:layout_marginTop="20dp" />
 
 </LinearLayout>
