--- a/app/src/main/res/layout/native_dialog.xml
+++ b/app/src/main/res/layout/native_dialog.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="The words you translate are required to be either from the native language to another language or from another language to the native language, and stored in a uniform format:\nforeign language -> \nnative language"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
+        android:text="The words you translate are required to be either from the native language to another language or from another language to the native language, and stored in a uniform format:\nforeign language → \nnative language"
         android:textColor="@color/black"
-        android:textSize="25dp"/>
+        android:textSize="25dp"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
