--- a/app/src/main/res/layout/list_word_layout.xml
+++ b/app/src/main/res/layout/list_word_layout.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:text="source"
         android:textColor="@color/black"
-        android:textSize="25dp"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,6 +27,16 @@
         app:layout_constraintHorizontal_bias="0.85"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/number_of_translations"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2"
+        android:textColor="@color/black"
+        android:textSize="15dp"
+        tools:ignore="MissingConstraints"
+        app:layout_constraintStart_toEndOf="@id/translations_spinner" />
 
     <ImageView
         android:id="@+id/delete_word_img"
