--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -11,34 +11,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-        <ImageView
-            android:id="@+id/backward_img"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:background="@drawable/blue_btn"
-            android:src="@drawable/backward_arrow"
-            tools:ignore="MissingConstraints" />
+    <ImageView
+        android:id="@+id/backward_img"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/golden_btn"
+        android:src="@drawable/backward_arrow"
+        tools:ignore="MissingConstraints" />
 
     <ImageButton
         android:id="@+id/take_photo_img"
-        android:layout_width="match_parent"
+        android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="500dp"
-        android:layout_marginEnd="150dp"
         android:background="@drawable/round_background"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.9"
         tools:ignore="MissingConstraints" />
 
-        <TextView
-            android:id="@+id/display_txt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:textColor="@color/black"
-            android:layout_marginLeft="60dp"
-            tools:ignore="MissingConstraints" />
+    <TextView
+        android:id="@+id/display_txt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="60dp"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
