--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -129,8 +129,9 @@
         android:id="@+id/backward_img"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:background="@drawable/blue_btn"
+        android:background="@drawable/golden_btn"
         android:src="@drawable/backward_arrow"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"/>
 
 </LinearLayout>
