--- a/app/src/main/res/layout/vocabulary_fragment.xml
+++ b/app/src/main/res/layout/vocabulary_fragment.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:text="Options"
         android:textColor="@color/black"
-        android:textSize="30dp"
+        android:textStyle="bold"
+        android:textSize="40dp"
         android:layout_gravity="center"/>
 
     <ListView
