--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -19,6 +19,18 @@
         android:src="@drawable/backward_arrow"
         tools:ignore="MissingConstraints" />
 
+    <ImageView
+        android:id="@+id/test_camera"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8"
+        tools:ignore="MissingConstraints" />
+
     <ImageButton
         android:id="@+id/take_photo_img"
         android:layout_width="60dp"
