--- a/app/src/main/res/layout/daily_word_widget.xml
+++ b/app/src/main/res/layout/daily_word_widget.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Daily Words"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold"
         android:layout_gravity="center"/>
