--- a/app/src/main/res/layout/daily_word_widget.xml
+++ b/app/src/main/res/layout/daily_word_widget.xml
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="No words"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:gravity="center"/>
 
     </FrameLayout>
