--- a/app/src/main/res/layout/vocabulary_fragment.xml
+++ b/app/src/main/res/layout/vocabulary_fragment.xml
@@ -20,8 +20,8 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:endIconMode="custom"
-        app:layout_constraintBottom_toTopOf="@+id/log_out_btn"
+        app:endIconMode="clear_text"
+        android:hint="search"
         app:startIconDrawable="@drawable/ic_search"
         android:visibility="gone"
         android:layout_gravity="center">
@@ -30,8 +30,7 @@
             android:id="@+id/search_edit_txt"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:visibility="gone" />
+            android:textColor="@color/black" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
