--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,6 +65,8 @@
         android:text="log in"
         android:textSize="25dp"
         android:textColor="@color/black"
+        android:fontFamily="@font/ubuntu_regular"
+        android:textStyle="bold"
         android:layout_gravity="center"
         android:background="@drawable/btns_background"
         app:backgroundTint="@null"
@@ -78,6 +80,8 @@
         android:text="sign up"
         android:textSize="25dp"
         android:textColor="@color/black"
+        android:fontFamily="@font/ubuntu_regular"
+        android:textStyle="bold"
         android:layout_gravity="center"
         android:background="@drawable/btns_background"
         app:backgroundTint="@null"
