--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,11 +19,11 @@
         android:id="@+id/splash_screen_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:text="WorDimension"
+        android:fontFamily="@font/beyond_wonderland"
         android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="50dp"
-        android:layout_centerInParent="true"/>
+        android:textSize="65dp" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
