--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -119,6 +119,8 @@
         android:text="sign up"
         android:textSize="25dp"
         android:textColor="@color/black"
+        android:fontFamily="@font/ubuntu_regular"
+        android:textStyle="bold"
         android:layout_gravity="center"
         android:background="@drawable/btns_background"
         app:backgroundTint="@null"
