--- a/app/src/main/res/layout/add_word_fragment.xml
+++ b/app/src/main/res/layout/add_word_fragment.xml
@@ -7,6 +7,16 @@
     android:orientation="vertical"
     android:id="@+id/add_word_screen">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="AddWord"
+        android:textColor="@color/black"
+        android:fontFamily="@font/black_chancery"
+        android:textSize="45dp"
+        android:layout_marginBottom="15dp"/>
+
     <LinearLayout
         android:id="@+id/language_select_layout"
         android:layout_width="match_parent"
@@ -15,7 +25,9 @@
         android:orientation="horizontal"
         android:layout_marginTop="5dp"
         android:elevation="5dp"
-        android:weightSum="3">
+        android:weightSum="3"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp">
 
         <Spinner
             android:id="@+id/select_from_language_spinner"
@@ -142,8 +154,11 @@
         android:text="translate"
         android:textSize="35dp"
         android:layout_gravity="center"
+        android:fontFamily="@font/ubuntu_regular"
+        android:textStyle="bold"
         android:backgroundTint="@color/teal_700"
         android:layout_marginTop="30dp"/>
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="85dp"
