--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -12,8 +12,8 @@
         android:layout_height="wrap_content"
         android:text="Profile"
         android:textColor="@color/black"
-        android:textSize="40dp"
-        android:textStyle="bold"
+        android:textSize="45dp"
+        android:fontFamily="@font/black_chancery"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -135,6 +135,8 @@
         android:textColor="@color/black"
         android:background="@drawable/golden_btn"
         app:backgroundTint="@null"
+        android:fontFamily="@font/ubuntu_regular"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/widget_option_txt"
         app:layout_constraintVertical_bias="0.035"
@@ -181,6 +183,8 @@
         android:textColor="@color/black"
         android:textSize="25dp"
         app:backgroundTint="@null"
+        android:fontFamily="@font/ubuntu_regular"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
