--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -127,23 +127,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <Button
-        android:id="@+id/reset_widget_btn"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="reset"
-        android:textColor="@color/black"
-        android:background="@drawable/golden_btn"
-        app:backgroundTint="@null"
-        android:fontFamily="@font/ubuntu_regular"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/widget_option_txt"
-        app:layout_constraintVertical_bias="0.035"
-        app:layout_constraintHorizontal_bias="0.15"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
     <TextView
         android:id="@+id/number_of_cards_txt"
         android:layout_width="wrap_content"
@@ -152,7 +135,7 @@
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reset_widget_btn"
+        app:layout_constraintTop_toBottomOf="@+id/widget_option_txt"
         app:layout_constraintVertical_bias="0.035"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -175,20 +158,38 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
-        android:id="@+id/log_out_btn"
-        android:layout_width="wrap_content"
+        android:id="@+id/reset_widget_btn"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/btns_background"
-        android:text="log out"
+        android:text="reset"
         android:textColor="@color/black"
-        android:textSize="25dp"
+        android:background="@drawable/golden_btn"
         app:backgroundTint="@null"
         android:fontFamily="@font/ubuntu_regular"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/number_of_cards_seekbar"
+        app:layout_constraintVertical_bias="0.035"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:id="@+id/log_out_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/btns_background"
+        android:fontFamily="@font/ubuntu_regular"
+        android:text="log out"
+        android:textColor="@color/black"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        app:backgroundTint="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.93" />
+        app:layout_constraintVertical_bias="0.975" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
