--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -2,7 +2,6 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textSize="21dp"
-    android:textColor="@color/black">
-
-</TextView>
+    android:gravity="center"
+    android:textSize="20dp"
+    android:textColor="@color/black"/>
