fixed light mode

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@drawable/round_background"
+    android:theme="@style/Theme.MaterialComponents.Light"
     android:backgroundTint="@null">
 
     <TextView
