--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:id="@+id/main_layout"
+    android:theme="@style/Theme.MaterialComponents.Light"
     android:background="@color/black">
 
     <FrameLayout
