--- a/app/src/main/res/layout/list_option_layout.xml
+++ b/app/src/main/res/layout/list_option_layout.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
+    android:theme="@style/Theme.MaterialComponents.Light"
     android:gravity="center_horizontal">
 
     <TextView
