--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -4,4 +4,5 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:textSize="20dp"
+    android:theme="@style/Theme.MaterialComponents.Light"
     android:textColor="@color/black"/>
